// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardFooter demo examples Snapshots: basic 1`] = `
.emotion-36::after {
  clear: both;
  content: "";
  display: table;
}

.emotion-36 > * {
  margin-bottom: 1em;
}

@media (min-width:40em) {
  .emotion-36 > * {
    float: left;
    margin-right: 1em;
    width: 47%;
  }
}

@media (min-width:64em) {
  .emotion-36 > *:nth-last-child(n+3),
  .emotion-36 > *:nth-last-child(n+3) ~ * {
    width: 30%;
  }
}

.emotion-5 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
  border: 1px solid #ebeff5;
  border-radius: 0.1875em;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2),0 4px 8px 0 rgba(0,0,0,0.2);
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

.emotion-5 *,
.emotion-5 *::before,
.emotion-5 *::after {
  box-sizing: inherit;
}

.emotion-5:focus {
  box-shadow: 0 0 0 2px #1d5bbf,0 1px 2px 0 rgba(0,0,0,0.2),0 2px 4px 0 rgba(0,0,0,0.2);
}

.emotion-1 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-1:last-child {
  margin-bottom: 1.5em;
}

.emotion-0 {
  font-size: 0.875em;
  line-height: 1.5;
}

.emotion-4 {
  background-color: #ebeff5;
  border: 1px solid #c8d1e0;
  border-radius: 0 0 0.1875em 0.1875em;
  margin: 0 -1px calc(-1px - 0.01em) -1px;
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

.emotion-3 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5em;
  margin-top: 0.5em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-2 {
  color: #333840;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 0.875em;
  font-weight: 700;
  margin: 0;
}

.emotion-16 {
  margin-bottom: 0.5em;
  margin-top: 0.5em;
  padding-left: 1em;
  padding-right: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-bottom: 0em;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 0.875em;
  margin-bottom: 0.5714285714285714em;
  margin-left: 0.5714285714285714em;
}

.emotion-10 {
  box-sizing: border-box;
  color: #3272d9;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  border-color: transparent;
  border-radius: 0.1875em;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: inline-block;
  font-weight: 600;
  height: 2em;
  margin: 0;
  min-width: 2em;
  padding: 0 0.5em;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
}

.emotion-10 *,
.emotion-10 *::before,
.emotion-10 *::after {
  box-sizing: inherit;
}

.emotion-10:focus {
  border-color: #1d5bbf;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10:hover {
  background-color: #f5f7fa;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10:focus:active,
.emotion-10:focus:hover {
  border-color: #1d5bbf;
}

.emotion-10:active {
  background-color: #ebeff5;
  color: #3272d9;
}

.emotion-10::-moz-focus-inner {
  border: 0;
}

.emotion-10 [role="img"] {
  box-sizing: content-box;
  color: #3272d9;
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-10 [role="img"]:first-child {
  margin-right: 0.5em;
}

.emotion-10 [role="img"]:last-child {
  margin-left: 0.5em;
}

.emotion-10 [role="img"]:only-child {
  margin: 0;
}

.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-height: 100%;
  pointer-events: none;
  width: 100%;
}

.emotion-8 {
  display: block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  font-size: 0.875em;
  line-height: 2.2857142857142856em;
}

.emotion-14 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #3272d9;
  border-color: transparent;
  border-radius: 0.1875em;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: inline-block;
  font-weight: 600;
  height: 2em;
  margin: 0;
  min-width: 2em;
  padding: 0 0.5em;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
}

.emotion-14 *,
.emotion-14 *::before,
.emotion-14 *::after {
  box-sizing: inherit;
}

.emotion-14:focus {
  background-color: #3272d9;
  box-shadow: 0 0 0 1px #ffffff,0 0 0 2px #1d5bbf;
  color: #ffffff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-14:hover {
  background-color: #5691f0;
  color: #ffffff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-14:focus:active,
.emotion-14:focus:hover {
  border-color: transparent;
}

.emotion-14:active {
  background-color: #1d5bbf;
  border-color: #1d5bbf;
  color: #ffffff;
}

.emotion-14::-moz-focus-inner {
  border: 0;
}

.emotion-14 [role="img"] {
  box-sizing: content-box;
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-14 [role="img"]:first-child {
  margin-right: 0.5em;
}

.emotion-14 [role="img"]:last-child {
  margin-left: 0.5em;
}

.emotion-14 [role="img"]:only-child {
  margin: 0;
}

.emotion-24 {
  margin-bottom: 0.5em;
  margin-top: 0.5em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-24:last-child {
  margin-bottom: 1em;
}

<DemoLayout>
  <Styled(div)>
    <div
      className="emotion-36"
    >
      <Card>
        <Styled(div)>
          <div
            className="emotion-5"
          >
            <CardBlock>
              <Styled(div)>
                <div
                  className="emotion-1"
                >
                  <Styled(div)>
                    <div
                      className="emotion-0"
                    >
                      
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                    </div>
                  </Styled(div)>
                </div>
              </Styled(div)>
            </CardBlock>
            <CardFooter
              title="Footer Title Only"
              triggerTitle={[Function]}
            >
              <Styled(div)>
                <div
                  className="emotion-4"
                >
                  <Styled(div)>
                    <div
                      className="emotion-3"
                    >
                      <Styled(h4)>
                        <h4
                          className="emotion-2"
                        >
                          Footer Title Only
                        </h4>
                      </Styled(h4)>
                    </div>
                  </Styled(div)>
                </div>
              </Styled(div)>
            </CardFooter>
          </div>
        </Styled(div)>
      </Card>
      <Card>
        <Styled(div)>
          <div
            className="emotion-5"
          >
            <CardBlock>
              <Styled(div)>
                <div
                  className="emotion-1"
                >
                  <Styled(div)>
                    <div
                      className="emotion-0"
                    >
                      
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                    </div>
                  </Styled(div)>
                </div>
              </Styled(div)>
            </CardBlock>
            <CardFooter
              triggerTitle={[Function]}
            >
              <Styled(div)>
                <div
                  className="emotion-4"
                >
                  <WithTheme(Themed(Component))>
                    <Themed(Component)>
                      <ThemeProvider>
                        <ThemeProvider>
                          <Component>
                            <div>
                              <CardActions>
                                <Styled(div)>
                                  <div
                                    className="emotion-16"
                                  >
                                    <Styled(span)
                                      key="0/.0"
                                    >
                                      <span
                                        className="emotion-11"
                                      >
                                        <WithForwardRef(Button)
                                          minimal={true}
                                          size="medium"
                                        >
                                          <Button
                                            forwardedRef={null}
                                            minimal={true}
                                            size="medium"
                                          >
                                            <Styled(button)
                                              minimal={true}
                                              size="medium"
                                              text="Button 1"
                                            >
                                              <button
                                                className="emotion-10"
                                              >
                                                <Styled(span)>
                                                  <span
                                                    className="emotion-9"
                                                  >
                                                    <Styled(span)
                                                      size="medium"
                                                    >
                                                      <span
                                                        className="emotion-8"
                                                      >
                                                        Button 1
                                                      </span>
                                                    </Styled(span)>
                                                  </span>
                                                </Styled(span)>
                                              </button>
                                            </Styled(button)>
                                          </Button>
                                        </WithForwardRef(Button)>
                                      </span>
                                    </Styled(span)>
                                    <Styled(span)
                                      key="1/.1"
                                    >
                                      <span
                                        className="emotion-11"
                                      >
                                        <WithForwardRef(Button)
                                          primary={true}
                                          size="medium"
                                        >
                                          <Button
                                            forwardedRef={null}
                                            primary={true}
                                            size="medium"
                                          >
                                            <Styled(button)
                                              primary={true}
                                              size="medium"
                                              text="Button 2"
                                            >
                                              <button
                                                className="emotion-14"
                                              >
                                                <Styled(span)>
                                                  <span
                                                    className="emotion-9"
                                                  >
                                                    <Styled(span)
                                                      size="medium"
                                                    >
                                                      <span
                                                        className="emotion-8"
                                                      >
                                                        Button 2
                                                      </span>
                                                    </Styled(span)>
                                                  </span>
                                                </Styled(span)>
                                              </button>
                                            </Styled(button)>
                                          </Button>
                                        </WithForwardRef(Button)>
                                      </span>
                                    </Styled(span)>
                                  </div>
                                </Styled(div)>
                              </CardActions>
                            </div>
                          </Component>
                        </ThemeProvider>
                      </ThemeProvider>
                    </Themed(Component)>
                  </WithTheme(Themed(Component))>
                </div>
              </Styled(div)>
            </CardFooter>
          </div>
        </Styled(div)>
      </Card>
      <Card>
        <Styled(div)>
          <div
            className="emotion-5"
          >
            <CardBlock>
              <Styled(div)>
                <div
                  className="emotion-1"
                >
                  <Styled(div)>
                    <div
                      className="emotion-0"
                    >
                      
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                    </div>
                  </Styled(div)>
                </div>
              </Styled(div)>
            </CardBlock>
            <CardFooter
              title="Footer Title"
              triggerTitle={[Function]}
            >
              <Styled(div)>
                <div
                  className="emotion-4"
                >
                  <Styled(div)>
                    <div
                      className="emotion-3"
                    >
                      <Styled(h4)>
                        <h4
                          className="emotion-2"
                        >
                          Footer Title
                        </h4>
                      </Styled(h4)>
                    </div>
                  </Styled(div)>
                  <WithTheme(Themed(Component))>
                    <Themed(Component)>
                      <ThemeProvider>
                        <ThemeProvider>
                          <Component>
                            <div>
                              <CardBlock>
                                <Styled(div)>
                                  <div
                                    className="emotion-24"
                                  >
                                    <Styled(div)>
                                      <div
                                        className="emotion-0"
                                      >
                                        
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                                      </div>
                                    </Styled(div)>
                                  </div>
                                </Styled(div)>
                              </CardBlock>
                              <CardActions>
                                <Styled(div)>
                                  <div
                                    className="emotion-16"
                                  >
                                    <Styled(span)
                                      key="0/.0"
                                    >
                                      <span
                                        className="emotion-11"
                                      >
                                        <WithForwardRef(Button)
                                          minimal={true}
                                          size="medium"
                                        >
                                          <Button
                                            forwardedRef={null}
                                            minimal={true}
                                            size="medium"
                                          >
                                            <Styled(button)
                                              minimal={true}
                                              size="medium"
                                              text="Button 1"
                                            >
                                              <button
                                                className="emotion-10"
                                              >
                                                <Styled(span)>
                                                  <span
                                                    className="emotion-9"
                                                  >
                                                    <Styled(span)
                                                      size="medium"
                                                    >
                                                      <span
                                                        className="emotion-8"
                                                      >
                                                        Button 1
                                                      </span>
                                                    </Styled(span)>
                                                  </span>
                                                </Styled(span)>
                                              </button>
                                            </Styled(button)>
                                          </Button>
                                        </WithForwardRef(Button)>
                                      </span>
                                    </Styled(span)>
                                    <Styled(span)
                                      key="1/.1"
                                    >
                                      <span
                                        className="emotion-11"
                                      >
                                        <WithForwardRef(Button)
                                          primary={true}
                                          size="medium"
                                        >
                                          <Button
                                            forwardedRef={null}
                                            primary={true}
                                            size="medium"
                                          >
                                            <Styled(button)
                                              primary={true}
                                              size="medium"
                                              text="Button 2"
                                            >
                                              <button
                                                className="emotion-14"
                                              >
                                                <Styled(span)>
                                                  <span
                                                    className="emotion-9"
                                                  >
                                                    <Styled(span)
                                                      size="medium"
                                                    >
                                                      <span
                                                        className="emotion-8"
                                                      >
                                                        Button 2
                                                      </span>
                                                    </Styled(span)>
                                                  </span>
                                                </Styled(span)>
                                              </button>
                                            </Styled(button)>
                                          </Button>
                                        </WithForwardRef(Button)>
                                      </span>
                                    </Styled(span)>
                                  </div>
                                </Styled(div)>
                              </CardActions>
                            </div>
                          </Component>
                        </ThemeProvider>
                      </ThemeProvider>
                    </Themed(Component)>
                  </WithTheme(Themed(Component))>
                </div>
              </Styled(div)>
            </CardFooter>
          </div>
        </Styled(div)>
      </Card>
    </div>
  </Styled(div)>
</DemoLayout>
`;

exports[`CardFooter demo examples Snapshots: controlled 1`] = `
.emotion-11 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
  border: 1px solid #ebeff5;
  border-radius: 0.1875em;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2),0 4px 8px 0 rgba(0,0,0,0.2);
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

.emotion-11 *,
.emotion-11 *::before,
.emotion-11 *::after {
  box-sizing: inherit;
}

.emotion-11:focus {
  box-shadow: 0 0 0 2px #1d5bbf,0 1px 2px 0 rgba(0,0,0,0.2),0 2px 4px 0 rgba(0,0,0,0.2);
}

.emotion-1 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-1:last-child {
  margin-bottom: 1.5em;
}

.emotion-0 {
  font-size: 0.875em;
  line-height: 1.5;
}

.emotion-10 {
  background-color: #ebeff5;
  border: 1px solid #c8d1e0;
  border-radius: 0 0 0.1875em 0.1875em;
  margin: 0 -1px calc(-1px - 0.01em) -1px;
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

.emotion-9 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5em;
  margin-top: 0.5em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-2 {
  color: #333840;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 0.875em;
  font-weight: 700;
  margin: 0;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-height: 100%;
  pointer-events: none;
  width: 100%;
}

.emotion-6 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: auto;
  min-width: 0;
  overflow: hidden;
  padding: 0;
  -webkit-transform: translateY(-0.0625em);
  -ms-transform: translateY(-0.0625em);
  transform: translateY(-0.0625em);
}

.emotion-6 > span {
  display: block;
  margin: -0.25em;
}

.emotion-6 [role="img"] {
  color: #58606e;
}

.emotion-5 {
  box-sizing: border-box;
  color: #3272d9;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  border-color: transparent;
  border-radius: 0.1875em;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: inline-block;
  font-weight: 600;
  height: 2.5em;
  margin: 0;
  min-width: 2.5em;
  padding: 0.4375em;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: auto;
  min-width: 0;
  overflow: hidden;
  padding: 0;
  -webkit-transform: translateY(-0.0625em);
  -ms-transform: translateY(-0.0625em);
  transform: translateY(-0.0625em);
}

.emotion-5 *,
.emotion-5 *::before,
.emotion-5 *::after {
  box-sizing: inherit;
}

.emotion-5:focus {
  border-color: #1d5bbf;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5:hover {
  background-color: #f5f7fa;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5:focus:active,
.emotion-5:focus:hover {
  border-color: #1d5bbf;
}

.emotion-5:active {
  background-color: #ebeff5;
  color: #3272d9;
}

.emotion-5::-moz-focus-inner {
  border: 0;
}

.emotion-5 [role="img"] {
  box-sizing: content-box;
  color: #3272d9;
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-5 [role="img"]:first-child {
  margin-right: 0.5em;
}

.emotion-5 [role="img"]:last-child {
  margin-left: 0.5em;
}

.emotion-5 [role="img"]:only-child {
  margin: 0;
}

.emotion-5 > span {
  display: block;
  margin: -0.25em;
}

.emotion-5 [role="img"] {
  color: #58606e;
}

.emotion-3 {
  fill: currentcolor;
  font-size: 16px;
  height: 1.5em;
  width: 1.5em;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-16[class]::before,
.emotion-16[class]::after {
  display: none;
}

.emotion-16 > [class] {
  float: none;
  margin: 0;
}

.emotion-16 > [class]:last-child {
  width: auto;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-15::after {
  clear: both;
  content: "";
  display: table;
}

.emotion-15 > * {
  margin-bottom: 1em;
}

@media (min-width:40em) {
  .emotion-15 > * {
    float: left;
    margin-right: 1em;
    width: 47%;
  }
}

@media (min-width:64em) {
  .emotion-15 > *:nth-last-child(n+3),
  .emotion-15 > *:nth-last-child(n+3) ~ * {
    width: 30%;
  }
}

.emotion-15[class]::before,
.emotion-15[class]::after {
  display: none;
}

.emotion-15 > [class] {
  float: none;
  margin: 0;
}

.emotion-15 > [class]:last-child {
  width: auto;
}

.emotion-14 {
  box-sizing: border-box;
  color: #3272d9;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
  border-color: #c8d1e0;
  border-radius: 0.1875em;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: inline-block;
  font-weight: 600;
  height: 2.5em;
  margin: 0;
  min-width: 2.5em;
  padding: 0 0.5em;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
}

.emotion-14 *,
.emotion-14 *::before,
.emotion-14 *::after {
  box-sizing: inherit;
}

.emotion-14:focus {
  background-color: #ffffff;
  box-shadow: 0 0 0 1px #ffffff,0 0 0 2px #1d5bbf;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-14:hover {
  background-color: #f5f7fa;
  border-color: #5691f0;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-14:focus:active,
.emotion-14:focus:hover {
  border-color: #c8d1e0;
}

.emotion-14:active {
  background-color: #ebeff5;
  border-color: #1d5bbf;
  color: #3272d9;
}

.emotion-14::-moz-focus-inner {
  border: 0;
}

.emotion-14 [role="img"] {
  box-sizing: content-box;
  color: #3272d9;
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-14 [role="img"]:first-child {
  margin-right: 0.5em;
}

.emotion-14 [role="img"]:last-child {
  margin-left: 0.5em;
}

.emotion-14 [role="img"]:only-child {
  margin: 0;
}

.emotion-12 {
  display: block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  font-size: 0.875em;
  line-height: 2.857142857142857em;
}

.emotion-12:first-child {
  padding-left: 0.5714285714285714em;
}

.emotion-12:last-child {
  padding-right: 0.5714285714285714em;
}

<App>
  <Styled(DemoLayout)>
    <DemoLayout
      className="emotion-16"
    >
      <Styled(div)
        className="emotion-16"
      >
        <div
          className="emotion-15"
        >
          <Card>
            <Styled(div)>
              <div
                className="emotion-11"
              >
                <CardBlock>
                  <Styled(div)>
                    <div
                      className="emotion-1"
                    >
                      <Styled(div)>
                        <div
                          className="emotion-0"
                        >
                          
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                        </div>
                      </Styled(div)>
                    </div>
                  </Styled(div)>
                </CardBlock>
                <CardFooter
                  expandable={true}
                  isOpen={false}
                  onClose={[Function]}
                  onOpen={[Function]}
                  title="Footer Title"
                  triggerTitle={[Function]}
                >
                  <Styled(div)
                    isOpen={false}
                  >
                    <div
                      className="emotion-10"
                    >
                      <Styled(div)>
                        <div
                          className="emotion-9"
                        >
                          <Styled(h4)>
                            <h4
                              className="emotion-2"
                            >
                              Footer Title
                            </h4>
                          </Styled(h4)>
                          <withProps(Styled(WithForwardRef(Button)))
                            iconStart={
                              <IconExpandMore
                                title="Expand contents"
                              />
                            }
                            minimal={true}
                            onClick={[Function]}
                          >
                            <Styled(WithForwardRef(Button))
                              iconStart={
                                <IconExpandMore
                                  title="Expand contents"
                                />
                              }
                              minimal={true}
                              onClick={[Function]}
                              size="large"
                              type="button"
                            >
                              <WithForwardRef(Button)
                                className="emotion-6"
                                iconStart={
                                  <IconExpandMore
                                    title="Expand contents"
                                  />
                                }
                                minimal={true}
                                onClick={[Function]}
                                size="large"
                                type="button"
                              >
                                <Button
                                  className="emotion-6"
                                  forwardedRef={null}
                                  iconStart={
                                    <IconExpandMore
                                      title="Expand contents"
                                    />
                                  }
                                  minimal={true}
                                  onClick={[Function]}
                                  size="large"
                                  type="button"
                                >
                                  <Styled(button)
                                    className="emotion-6"
                                    minimal={true}
                                    onClick={[Function]}
                                    size="large"
                                    type="button"
                                  >
                                    <button
                                      className="emotion-5"
                                      onClick={[Function]}
                                      type="button"
                                    >
                                      <Styled(span)>
                                        <span
                                          className="emotion-4"
                                        >
                                          <IconExpandMore
                                            key="iconStart"
                                            size="1.5em"
                                            title="Expand contents"
                                          >
                                            <Icon
                                              rtl={false}
                                              size="1.5em"
                                              title="Expand contents"
                                            >
                                              <Styled(svg)
                                                aria-hidden={null}
                                                aria-labelledby="icon-title-icon-3"
                                                focusable="false"
                                                role="img"
                                                rtl={false}
                                                size="1.5em"
                                                viewBox="0 0 24 24"
                                              >
                                                <svg
                                                  aria-hidden={null}
                                                  aria-labelledby="icon-title-icon-3"
                                                  className="emotion-3"
                                                  focusable="false"
                                                  role="img"
                                                  viewBox="0 0 24 24"
                                                >
                                                  <title
                                                    id="icon-title-icon-3"
                                                  >
                                                    Expand contents
                                                  </title>
                                                  <g>
                                                    <path
                                                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                                                    />
                                                  </g>
                                                </svg>
                                              </Styled(svg)>
                                            </Icon>
                                          </IconExpandMore>
                                        </span>
                                      </Styled(span)>
                                    </button>
                                  </Styled(button)>
                                </Button>
                              </WithForwardRef(Button)>
                            </Styled(WithForwardRef(Button))>
                          </withProps(Styled(WithForwardRef(Button)))>
                        </div>
                      </Styled(div)>
                    </div>
                  </Styled(div)>
                </CardFooter>
              </div>
            </Styled(div)>
          </Card>
          <WithForwardRef(Button)
            onClick={[Function]}
            size="large"
          >
            <Button
              forwardedRef={null}
              onClick={[Function]}
              size="large"
            >
              <Styled(button)
                onClick={[Function]}
                size="large"
                text="Expand CardFooter"
              >
                <button
                  className="emotion-14"
                  onClick={[Function]}
                >
                  <Styled(span)>
                    <span
                      className="emotion-4"
                    >
                      <Styled(span)
                        size="large"
                      >
                        <span
                          className="emotion-12"
                        >
                          Expand CardFooter
                        </span>
                      </Styled(span)>
                    </span>
                  </Styled(span)>
                </button>
              </Styled(button)>
            </Button>
          </WithForwardRef(Button)>
        </div>
      </Styled(div)>
    </DemoLayout>
  </Styled(DemoLayout)>
</App>
`;

exports[`CardFooter demo examples Snapshots: expandable 1`] = `
.emotion-26::after {
  clear: both;
  content: "";
  display: table;
}

.emotion-26 > * {
  margin-bottom: 1em;
}

@media (min-width:40em) {
  .emotion-26 > * {
    float: left;
    margin-right: 1em;
    width: 47%;
  }
}

@media (min-width:64em) {
  .emotion-26 > *:nth-last-child(n+3),
  .emotion-26 > *:nth-last-child(n+3) ~ * {
    width: 30%;
  }
}

.emotion-11 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
  border: 1px solid #ebeff5;
  border-radius: 0.1875em;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2),0 4px 8px 0 rgba(0,0,0,0.2);
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

.emotion-11 *,
.emotion-11 *::before,
.emotion-11 *::after {
  box-sizing: inherit;
}

.emotion-11:focus {
  box-shadow: 0 0 0 2px #1d5bbf,0 1px 2px 0 rgba(0,0,0,0.2),0 2px 4px 0 rgba(0,0,0,0.2);
}

.emotion-1 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-1:last-child {
  margin-bottom: 1.5em;
}

.emotion-0 {
  font-size: 0.875em;
  line-height: 1.5;
}

.emotion-10 {
  background-color: #ebeff5;
  border: 1px solid #c8d1e0;
  border-radius: 0 0 0.1875em 0.1875em;
  margin: 0 -1px calc(-1px - 0.01em) -1px;
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

.emotion-9 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5em;
  margin-top: 0.5em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-2 {
  color: #333840;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 0.875em;
  font-weight: 700;
  margin: 0;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-height: 100%;
  pointer-events: none;
  width: 100%;
}

.emotion-23 {
  margin-bottom: 0.5em;
  margin-top: 0.5em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-23:last-child {
  margin-bottom: 1em;
}

.emotion-6 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: auto;
  min-width: 0;
  overflow: hidden;
  padding: 0;
  -webkit-transform: translateY(-0.0625em);
  -ms-transform: translateY(-0.0625em);
  transform: translateY(-0.0625em);
}

.emotion-6 > span {
  display: block;
  margin: -0.25em;
}

.emotion-6 [role="img"] {
  color: #58606e;
}

.emotion-5 {
  box-sizing: border-box;
  color: #3272d9;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  border-color: transparent;
  border-radius: 0.1875em;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: inline-block;
  font-weight: 600;
  height: 2.5em;
  margin: 0;
  min-width: 2.5em;
  padding: 0.4375em;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: auto;
  min-width: 0;
  overflow: hidden;
  padding: 0;
  -webkit-transform: translateY(-0.0625em);
  -ms-transform: translateY(-0.0625em);
  transform: translateY(-0.0625em);
}

.emotion-5 *,
.emotion-5 *::before,
.emotion-5 *::after {
  box-sizing: inherit;
}

.emotion-5:focus {
  border-color: #1d5bbf;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5:hover {
  background-color: #f5f7fa;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5:focus:active,
.emotion-5:focus:hover {
  border-color: #1d5bbf;
}

.emotion-5:active {
  background-color: #ebeff5;
  color: #3272d9;
}

.emotion-5::-moz-focus-inner {
  border: 0;
}

.emotion-5 [role="img"] {
  box-sizing: content-box;
  color: #3272d9;
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-5 [role="img"]:first-child {
  margin-right: 0.5em;
}

.emotion-5 [role="img"]:last-child {
  margin-left: 0.5em;
}

.emotion-5 [role="img"]:only-child {
  margin: 0;
}

.emotion-5 > span {
  display: block;
  margin: -0.25em;
}

.emotion-5 [role="img"] {
  color: #58606e;
}

.emotion-3 {
  fill: currentcolor;
  font-size: 16px;
  height: 1.5em;
  width: 1.5em;
}

<DemoLayout>
  <Styled(div)>
    <div
      className="emotion-26"
    >
      <Card>
        <Styled(div)>
          <div
            className="emotion-11"
          >
            <CardBlock>
              <Styled(div)>
                <div
                  className="emotion-1"
                >
                  <Styled(div)>
                    <div
                      className="emotion-0"
                    >
                      
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                    </div>
                  </Styled(div)>
                </div>
              </Styled(div)>
            </CardBlock>
            <CardFooter
              expandable={true}
              title="Collapsed by Default"
              triggerTitle={[Function]}
            >
              <Styled(div)>
                <div
                  className="emotion-10"
                >
                  <Styled(div)>
                    <div
                      className="emotion-9"
                    >
                      <Styled(h4)>
                        <h4
                          className="emotion-2"
                        >
                          Collapsed by Default
                        </h4>
                      </Styled(h4)>
                      <withProps(Styled(WithForwardRef(Button)))
                        iconStart={
                          <IconExpandMore
                            title="Expand contents"
                          />
                        }
                        minimal={true}
                        onClick={[Function]}
                      >
                        <Styled(WithForwardRef(Button))
                          iconStart={
                            <IconExpandMore
                              title="Expand contents"
                            />
                          }
                          minimal={true}
                          onClick={[Function]}
                          size="large"
                          type="button"
                        >
                          <WithForwardRef(Button)
                            className="emotion-6"
                            iconStart={
                              <IconExpandMore
                                title="Expand contents"
                              />
                            }
                            minimal={true}
                            onClick={[Function]}
                            size="large"
                            type="button"
                          >
                            <Button
                              className="emotion-6"
                              forwardedRef={null}
                              iconStart={
                                <IconExpandMore
                                  title="Expand contents"
                                />
                              }
                              minimal={true}
                              onClick={[Function]}
                              size="large"
                              type="button"
                            >
                              <Styled(button)
                                className="emotion-6"
                                minimal={true}
                                onClick={[Function]}
                                size="large"
                                type="button"
                              >
                                <button
                                  className="emotion-5"
                                  onClick={[Function]}
                                  type="button"
                                >
                                  <Styled(span)>
                                    <span
                                      className="emotion-4"
                                    >
                                      <IconExpandMore
                                        key="iconStart"
                                        size="1.5em"
                                        title="Expand contents"
                                      >
                                        <Icon
                                          rtl={false}
                                          size="1.5em"
                                          title="Expand contents"
                                        >
                                          <Styled(svg)
                                            aria-hidden={null}
                                            aria-labelledby="icon-title-icon-1"
                                            focusable="false"
                                            role="img"
                                            rtl={false}
                                            size="1.5em"
                                            viewBox="0 0 24 24"
                                          >
                                            <svg
                                              aria-hidden={null}
                                              aria-labelledby="icon-title-icon-1"
                                              className="emotion-3"
                                              focusable="false"
                                              role="img"
                                              viewBox="0 0 24 24"
                                            >
                                              <title
                                                id="icon-title-icon-1"
                                              >
                                                Expand contents
                                              </title>
                                              <g>
                                                <path
                                                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                                                />
                                              </g>
                                            </svg>
                                          </Styled(svg)>
                                        </Icon>
                                      </IconExpandMore>
                                    </span>
                                  </Styled(span)>
                                </button>
                              </Styled(button)>
                            </Button>
                          </WithForwardRef(Button)>
                        </Styled(WithForwardRef(Button))>
                      </withProps(Styled(WithForwardRef(Button)))>
                    </div>
                  </Styled(div)>
                </div>
              </Styled(div)>
            </CardFooter>
          </div>
        </Styled(div)>
      </Card>
      <Card>
        <Styled(div)>
          <div
            className="emotion-11"
          >
            <CardBlock>
              <Styled(div)>
                <div
                  className="emotion-1"
                >
                  <Styled(div)>
                    <div
                      className="emotion-0"
                    >
                      
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                    </div>
                  </Styled(div)>
                </div>
              </Styled(div)>
            </CardBlock>
            <CardFooter
              defaultIsOpen={true}
              expandable={true}
              title="Expanded by Default"
              triggerTitle={[Function]}
            >
              <Styled(div)
                defaultIsOpen={true}
              >
                <div
                  className="emotion-10"
                >
                  <Styled(div)>
                    <div
                      className="emotion-9"
                    >
                      <Styled(h4)>
                        <h4
                          className="emotion-2"
                        >
                          Expanded by Default
                        </h4>
                      </Styled(h4)>
                      <withProps(Styled(WithForwardRef(Button)))
                        iconStart={
                          <IconExpandLess
                            title="Collapse contents"
                          />
                        }
                        minimal={true}
                        onClick={[Function]}
                      >
                        <Styled(WithForwardRef(Button))
                          iconStart={
                            <IconExpandLess
                              title="Collapse contents"
                            />
                          }
                          minimal={true}
                          onClick={[Function]}
                          size="large"
                          type="button"
                        >
                          <WithForwardRef(Button)
                            className="emotion-6"
                            iconStart={
                              <IconExpandLess
                                title="Collapse contents"
                              />
                            }
                            minimal={true}
                            onClick={[Function]}
                            size="large"
                            type="button"
                          >
                            <Button
                              className="emotion-6"
                              forwardedRef={null}
                              iconStart={
                                <IconExpandLess
                                  title="Collapse contents"
                                />
                              }
                              minimal={true}
                              onClick={[Function]}
                              size="large"
                              type="button"
                            >
                              <Styled(button)
                                className="emotion-6"
                                minimal={true}
                                onClick={[Function]}
                                size="large"
                                type="button"
                              >
                                <button
                                  className="emotion-5"
                                  onClick={[Function]}
                                  type="button"
                                >
                                  <Styled(span)>
                                    <span
                                      className="emotion-4"
                                    >
                                      <IconExpandLess
                                        key="iconStart"
                                        size="1.5em"
                                        title="Collapse contents"
                                      >
                                        <Icon
                                          rtl={false}
                                          size="1.5em"
                                          title="Collapse contents"
                                        >
                                          <Styled(svg)
                                            aria-hidden={null}
                                            aria-labelledby="icon-title-icon-2"
                                            focusable="false"
                                            role="img"
                                            rtl={false}
                                            size="1.5em"
                                            viewBox="0 0 24 24"
                                          >
                                            <svg
                                              aria-hidden={null}
                                              aria-labelledby="icon-title-icon-2"
                                              className="emotion-3"
                                              focusable="false"
                                              role="img"
                                              viewBox="0 0 24 24"
                                            >
                                              <title
                                                id="icon-title-icon-2"
                                              >
                                                Collapse contents
                                              </title>
                                              <g>
                                                <path
                                                  d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                                                />
                                              </g>
                                            </svg>
                                          </Styled(svg)>
                                        </Icon>
                                      </IconExpandLess>
                                    </span>
                                  </Styled(span)>
                                </button>
                              </Styled(button)>
                            </Button>
                          </WithForwardRef(Button)>
                        </Styled(WithForwardRef(Button))>
                      </withProps(Styled(WithForwardRef(Button)))>
                    </div>
                  </Styled(div)>
                  <WithTheme(Themed(Component))>
                    <Themed(Component)>
                      <ThemeProvider>
                        <ThemeProvider>
                          <Component>
                            <div>
                              <CardBlock>
                                <Styled(div)>
                                  <div
                                    className="emotion-23"
                                  >
                                    <Styled(div)>
                                      <div
                                        className="emotion-0"
                                      >
                                        
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                                      </div>
                                    </Styled(div)>
                                  </div>
                                </Styled(div)>
                              </CardBlock>
                            </div>
                          </Component>
                        </ThemeProvider>
                      </ThemeProvider>
                    </Themed(Component)>
                  </WithTheme(Themed(Component))>
                </div>
              </Styled(div)>
            </CardFooter>
          </div>
        </Styled(div)>
      </Card>
    </div>
  </Styled(div)>
</DemoLayout>
`;

exports[`CardFooter demo examples Snapshots: rtl 1`] = `
.emotion-12::after {
  clear: both;
  content: "";
  display: table;
}

.emotion-12 > * {
  margin-bottom: 1em;
}

@media (min-width:40em) {
  .emotion-12 > * {
    float: left;
    margin-right: 1em;
    width: 47%;
  }
}

@media (min-width:64em) {
  .emotion-12 > *:nth-last-child(n+3),
  .emotion-12 > *:nth-last-child(n+3) ~ * {
    width: 30%;
  }
}

.emotion-11 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
  border: 1px solid #ebeff5;
  border-radius: 0.1875em;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2),0 4px 8px 0 rgba(0,0,0,0.2);
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

.emotion-11 *,
.emotion-11 *::before,
.emotion-11 *::after {
  box-sizing: inherit;
}

.emotion-11:focus {
  box-shadow: 0 0 0 2px #1d5bbf,0 1px 2px 0 rgba(0,0,0,0.2),0 2px 4px 0 rgba(0,0,0,0.2);
}

.emotion-1 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-1:last-child {
  margin-bottom: 1.5em;
}

.emotion-0 {
  font-size: 0.875em;
  line-height: 1.5;
}

.emotion-10 {
  background-color: #ebeff5;
  border: 1px solid #c8d1e0;
  border-radius: 0 0 0.1875em 0.1875em;
  margin: 0 -1px calc(-1px - 0.01em) -1px;
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

.emotion-9 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5em;
  margin-top: 0.5em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-2 {
  color: #333840;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 0.875em;
  font-weight: 700;
  margin: 0;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-height: 100%;
  pointer-events: none;
  width: 100%;
}

.emotion-6 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: auto;
  min-width: 0;
  overflow: hidden;
  padding: 0;
  -webkit-transform: translateY(-0.0625em);
  -ms-transform: translateY(-0.0625em);
  transform: translateY(-0.0625em);
}

.emotion-6 > span {
  display: block;
  margin: -0.25em;
}

.emotion-6 [role="img"] {
  color: #58606e;
}

.emotion-3 {
  fill: currentcolor;
  font-size: 16px;
  height: 1.5em;
  width: 1.5em;
}

.emotion-5 {
  box-sizing: border-box;
  color: #3272d9;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  border-color: transparent;
  border-radius: 0.1875em;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: inline-block;
  font-weight: 600;
  height: 2.5em;
  margin: 0;
  min-width: 2.5em;
  padding: 0.4375em;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: auto;
  min-width: 0;
  overflow: hidden;
  padding: 0;
  -webkit-transform: translateY(-0.0625em);
  -ms-transform: translateY(-0.0625em);
  transform: translateY(-0.0625em);
}

.emotion-5 *,
.emotion-5 *::before,
.emotion-5 *::after {
  box-sizing: inherit;
}

.emotion-5:focus {
  border-color: #1d5bbf;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5:hover {
  background-color: #f5f7fa;
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5:focus:active,
.emotion-5:focus:hover {
  border-color: #1d5bbf;
}

.emotion-5:active {
  background-color: #ebeff5;
  color: #3272d9;
}

.emotion-5::-moz-focus-inner {
  border: 0;
}

.emotion-5 [role="img"] {
  box-sizing: content-box;
  color: #3272d9;
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-5 [role="img"]:first-child {
  margin-left: 0.5em;
}

.emotion-5 [role="img"]:last-child {
  margin-right: 0.5em;
}

.emotion-5 [role="img"]:only-child {
  margin: 0;
}

.emotion-5 > span {
  display: block;
  margin: -0.25em;
}

.emotion-5 [role="img"] {
  color: #58606e;
}

<DemoLayout
  dir="rtl"
>
  <Styled(div)
    dir="rtl"
  >
    <div
      className="emotion-12"
      dir="rtl"
    >
      <ThemeProvider>
        <ThemeProvider>
          <Card>
            <Styled(div)>
              <div
                className="emotion-11"
              >
                <CardBlock>
                  <Styled(div)>
                    <div
                      className="emotion-1"
                    >
                      <Styled(div)>
                        <div
                          className="emotion-0"
                        >
                          
  خدمة الجزر أبجد هوز. حتى على مستوى أسعار العقارات. الغلوتين. لا عقوبة. حتى الرعاية. ولكن الآن تنورة المؤلف والتغذية.

                        </div>
                      </Styled(div)>
                    </div>
                  </Styled(div)>
                </CardBlock>
                <CardFooter
                  expandable={true}
                  title="تذييل العنوان"
                  triggerTitle={[Function]}
                >
                  <Styled(div)>
                    <div
                      className="emotion-10"
                    >
                      <Styled(div)>
                        <div
                          className="emotion-9"
                        >
                          <Styled(h4)>
                            <h4
                              className="emotion-2"
                            >
                              تذييل العنوان
                            </h4>
                          </Styled(h4)>
                          <withProps(Styled(WithForwardRef(Button)))
                            iconStart={
                              <IconExpandMore
                                title="قم بتوسيع المحتويات"
                              />
                            }
                            minimal={true}
                            onClick={[Function]}
                          >
                            <Styled(WithForwardRef(Button))
                              iconStart={
                                <IconExpandMore
                                  title="قم بتوسيع المحتويات"
                                />
                              }
                              minimal={true}
                              onClick={[Function]}
                              size="large"
                              type="button"
                            >
                              <WithForwardRef(Button)
                                className="emotion-6"
                                iconStart={
                                  <IconExpandMore
                                    title="قم بتوسيع المحتويات"
                                  />
                                }
                                minimal={true}
                                onClick={[Function]}
                                size="large"
                                type="button"
                              >
                                <Button
                                  className="emotion-6"
                                  forwardedRef={null}
                                  iconStart={
                                    <IconExpandMore
                                      title="قم بتوسيع المحتويات"
                                    />
                                  }
                                  minimal={true}
                                  onClick={[Function]}
                                  size="large"
                                  type="button"
                                >
                                  <Styled(button)
                                    className="emotion-6"
                                    minimal={true}
                                    onClick={[Function]}
                                    size="large"
                                    type="button"
                                  >
                                    <button
                                      className="emotion-5"
                                      onClick={[Function]}
                                      type="button"
                                    >
                                      <Styled(span)>
                                        <span
                                          className="emotion-4"
                                        >
                                          <IconExpandMore
                                            key="iconStart"
                                            size="1.5em"
                                            title="قم بتوسيع المحتويات"
                                          >
                                            <Icon
                                              rtl={false}
                                              size="1.5em"
                                              title="قم بتوسيع المحتويات"
                                            >
                                              <Styled(svg)
                                                aria-hidden={null}
                                                aria-labelledby="icon-title-icon-4"
                                                focusable="false"
                                                role="img"
                                                rtl={false}
                                                size="1.5em"
                                                viewBox="0 0 24 24"
                                              >
                                                <svg
                                                  aria-hidden={null}
                                                  aria-labelledby="icon-title-icon-4"
                                                  className="emotion-3"
                                                  focusable="false"
                                                  role="img"
                                                  viewBox="0 0 24 24"
                                                >
                                                  <title
                                                    id="icon-title-icon-4"
                                                  >
                                                    قم بتوسيع المحتويات
                                                  </title>
                                                  <g>
                                                    <path
                                                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                                                    />
                                                  </g>
                                                </svg>
                                              </Styled(svg)>
                                            </Icon>
                                          </IconExpandMore>
                                        </span>
                                      </Styled(span)>
                                    </button>
                                  </Styled(button)>
                                </Button>
                              </WithForwardRef(Button)>
                            </Styled(WithForwardRef(Button))>
                          </withProps(Styled(WithForwardRef(Button)))>
                        </div>
                      </Styled(div)>
                    </div>
                  </Styled(div)>
                </CardFooter>
              </div>
            </Styled(div)>
          </Card>
        </ThemeProvider>
      </ThemeProvider>
    </div>
  </Styled(div)>
</DemoLayout>
`;

exports[`CardFooter demo examples Snapshots: variants 1`] = `
.emotion-24::after {
  clear: both;
  content: "";
  display: table;
}

.emotion-24 > * {
  margin-bottom: 1em;
}

@media (min-width:40em) {
  .emotion-24 > * {
    float: left;
    margin-right: 1em;
    width: 47%;
  }
}

@media (min-width:64em) {
  .emotion-24 > *:nth-last-child(n+3),
  .emotion-24 > *:nth-last-child(n+3) ~ * {
    width: 30%;
  }
}

.emotion-7 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
  border: 1px solid #ebeff5;
  border-radius: 0.1875em;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2),0 4px 8px 0 rgba(0,0,0,0.2);
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

.emotion-7 *,
.emotion-7 *::before,
.emotion-7 *::after {
  box-sizing: inherit;
}

.emotion-7:focus {
  box-shadow: 0 0 0 2px #1d5bbf,0 1px 2px 0 rgba(0,0,0,0.2),0 2px 4px 0 rgba(0,0,0,0.2);
}

.emotion-1 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-1:last-child {
  margin-bottom: 1.5em;
}

.emotion-0 {
  font-size: 0.875em;
  line-height: 1.5;
}

.emotion-3 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5em;
  margin-top: 0.5em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-2 {
  color: #333840;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 0.875em;
  font-weight: 700;
  margin: 0;
}

.emotion-5 {
  margin-bottom: 0.5em;
  margin-top: 0.5em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-5:last-child {
  margin-bottom: 1em;
}

.emotion-6 {
  background-color: #abedc5;
  border: 1px solid #57c282;
  border-radius: 0 0 0.1875em 0.1875em;
  margin: 0 -1px calc(-1px - 0.01em) -1px;
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

.emotion-14 {
  background-color: #fad8af;
  border: 1px solid #e89c3f;
  border-radius: 0 0 0.1875em 0.1875em;
  margin: 0 -1px calc(-1px - 0.01em) -1px;
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

.emotion-22 {
  background-color: #fad4d4;
  border: 1px solid #fa8e8e;
  border-radius: 0 0 0.1875em 0.1875em;
  margin: 0 -1px calc(-1px - 0.01em) -1px;
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

<DemoLayout>
  <Styled(div)>
    <div
      className="emotion-24"
    >
      <Card>
        <Styled(div)>
          <div
            className="emotion-7"
          >
            <CardBlock>
              <Styled(div)>
                <div
                  className="emotion-1"
                >
                  <Styled(div)>
                    <div
                      className="emotion-0"
                    >
                      
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                    </div>
                  </Styled(div)>
                </div>
              </Styled(div)>
            </CardBlock>
            <CardFooter
              title="Success Footer Title"
              triggerTitle={[Function]}
              variant="success"
            >
              <Styled(div)
                variant="success"
              >
                <div
                  className="emotion-6"
                >
                  <Styled(div)>
                    <div
                      className="emotion-3"
                    >
                      <Styled(h4)>
                        <h4
                          className="emotion-2"
                        >
                          Success Footer Title
                        </h4>
                      </Styled(h4)>
                    </div>
                  </Styled(div)>
                  <WithTheme(Themed(Component))>
                    <Themed(Component)>
                      <ThemeProvider>
                        <ThemeProvider>
                          <Component>
                            <div>
                              <CardBlock>
                                <Styled(div)>
                                  <div
                                    className="emotion-5"
                                  >
                                    <Styled(div)>
                                      <div
                                        className="emotion-0"
                                      >
                                        
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                                      </div>
                                    </Styled(div)>
                                  </div>
                                </Styled(div)>
                              </CardBlock>
                            </div>
                          </Component>
                        </ThemeProvider>
                      </ThemeProvider>
                    </Themed(Component)>
                  </WithTheme(Themed(Component))>
                </div>
              </Styled(div)>
            </CardFooter>
          </div>
        </Styled(div)>
      </Card>
      <Card>
        <Styled(div)>
          <div
            className="emotion-7"
          >
            <CardBlock>
              <Styled(div)>
                <div
                  className="emotion-1"
                >
                  <Styled(div)>
                    <div
                      className="emotion-0"
                    >
                      
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                    </div>
                  </Styled(div)>
                </div>
              </Styled(div)>
            </CardBlock>
            <CardFooter
              title="Warning Footer Title"
              triggerTitle={[Function]}
              variant="warning"
            >
              <Styled(div)
                variant="warning"
              >
                <div
                  className="emotion-14"
                >
                  <Styled(div)>
                    <div
                      className="emotion-3"
                    >
                      <Styled(h4)>
                        <h4
                          className="emotion-2"
                        >
                          Warning Footer Title
                        </h4>
                      </Styled(h4)>
                    </div>
                  </Styled(div)>
                  <WithTheme(Themed(Component))>
                    <Themed(Component)>
                      <ThemeProvider>
                        <ThemeProvider>
                          <Component>
                            <div>
                              <CardBlock>
                                <Styled(div)>
                                  <div
                                    className="emotion-5"
                                  >
                                    <Styled(div)>
                                      <div
                                        className="emotion-0"
                                      >
                                        
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                                      </div>
                                    </Styled(div)>
                                  </div>
                                </Styled(div)>
                              </CardBlock>
                            </div>
                          </Component>
                        </ThemeProvider>
                      </ThemeProvider>
                    </Themed(Component)>
                  </WithTheme(Themed(Component))>
                </div>
              </Styled(div)>
            </CardFooter>
          </div>
        </Styled(div)>
      </Card>
      <Card>
        <Styled(div)>
          <div
            className="emotion-7"
          >
            <CardBlock>
              <Styled(div)>
                <div
                  className="emotion-1"
                >
                  <Styled(div)>
                    <div
                      className="emotion-0"
                    >
                      
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                    </div>
                  </Styled(div)>
                </div>
              </Styled(div)>
            </CardBlock>
            <CardFooter
              title="Danger Footer Title"
              triggerTitle={[Function]}
              variant="danger"
            >
              <Styled(div)
                variant="danger"
              >
                <div
                  className="emotion-22"
                >
                  <Styled(div)>
                    <div
                      className="emotion-3"
                    >
                      <Styled(h4)>
                        <h4
                          className="emotion-2"
                        >
                          Danger Footer Title
                        </h4>
                      </Styled(h4)>
                    </div>
                  </Styled(div)>
                  <WithTheme(Themed(Component))>
                    <Themed(Component)>
                      <ThemeProvider>
                        <ThemeProvider>
                          <Component>
                            <div>
                              <CardBlock>
                                <Styled(div)>
                                  <div
                                    className="emotion-5"
                                  >
                                    <Styled(div)>
                                      <div
                                        className="emotion-0"
                                      >
                                        
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                                      </div>
                                    </Styled(div)>
                                  </div>
                                </Styled(div)>
                              </CardBlock>
                            </div>
                          </Component>
                        </ThemeProvider>
                      </ThemeProvider>
                    </Themed(Component)>
                  </WithTheme(Themed(Component))>
                </div>
              </Styled(div)>
            </CardFooter>
          </div>
        </Styled(div)>
      </Card>
    </div>
  </Styled(div)>
</DemoLayout>
`;
